--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
