--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-fetch": "^2.6.7",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
